--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Login Page</h1>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Login Page</h1>
+
+    <button routerLink="/prebuilt">Prebuilt</button>
+    <button routerLink="/headless">Headless</button>
+    <router-outlet></router-outlet>
+  </body>
 </html>
